	  2.6.18-164.11.1.el5 (RHEL 5)
	  2.6.18-164.6.1.0.1.el5 (OEL 5)
	* Client support for unpatched kernels:
	  (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	  2.6.16 - 2.6.30 vanilla (kernel.org)
	* Recommended e2fsprogs version: 1.41.6.sun1
	* The async journal commit feature (bug 19128) and the cancel
	  lock before replay feature (bug 16774) are disabled by default.

Severity   : enhancement
Bugzilla   : 21632
Description: Update RHEL5.4 kernel to 2.6.18-164.11.1.el5.

Severity   : enhancement
Bugzilla   : 21511/19848
Description: Update SLES11 kernel to 2.6.27.39-0.3.1.

Severity   : enhancement
Bugzilla   : 20758
Description: Update supported SLES10 kernel to 2.6.16.60-0.42.8.

Severity   : enhancement
Bugzilla   : 20773
Description: Update kernel to RHEL5.4 2.6.18-164.6.1.el5 and
	     OEL5 2.6.18-164.6.1.0.1.el5(Both in-kernel OFED enabled).

Severity   : enhancement
Bugzilla   : 16312
Description: Build kernels (RHEL5, OEL5 and SLES10/11) using the vendor's own
	     kernel spec file.

Severity   : enhancement
Bugzilla   : 19808
Description: Vanilla kernel 2.6.30 patchless client support.

Severity   : major
Frequency  : rare
Bugzilla   : 20892
Description: bad entry in directory xxx: inode out of bounds
Details    : fix locking issue in the rename path which could race with any
	     other operations updating the same directory.

Severity   : enhancement
Bugzilla   : 20722
Description: Make watchdog timer messages to be more clear and descriptive.

Severity   : normal
Bugzilla   : 21489
Description: cp -p command does not preserve the dates and timestamp
Details    : mtime could be spoiled by a write callback

Severity   : normal
Bugzilla   : 21513
Description: Clear imp_force_reconnect correctly in ptlrpc_connect_interpret()

Severity   : normal
Bugzilla   : 21259
Description: Allow non-root access for "lfs check".
Details    : Added a check in obd_class_ioctl() for OBD_IOC_PING_TARGET.

Severity   : enhancement
Bugzilla   : 19763