@@ -12,6 +12,12 @@
 	* The async journal commit feature (bug 19128) and the cancel
 	  lock before replay feature (bug 16774) are disabled by default.
 
+Severity   : normal
+Bugzilla   : 21804
+Description: release request ref through ptlrpc_server_drop_request()
+Details    : make sure the request is protected by rq_refcount while
+             being processed in ptlrpc_server_handle_req_in().
+
 Severity   : enhancement
 Bugzilla   : 21632
 Description: Update RHEL5.4 kernel to 2.6.18-164.11.1.el5.
